[project]
name = "trainerbot"
version = "0.1.0"
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
torch = "^2.3.0"
transformers = "^4.41.0"
datasets = "^2.20.0"
trainer = "^0.10.0"
accelerate = "^0.29.0"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
